apps/java-sejin22/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-sejin22
  labels:
    app.kubernetes.io/name: java-sejin22
