apps/java-sejin22/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-sejin22
  namespace: java-sejin22
  labels:
    app.kubernetes.io/name: java-sejin22
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: java-sejin22
  template:
    metadata:
      labels:
        app.kubernetes.io/name: java-sejin22
    spec:
      containers:
        - name: app
          image: 710232982381.dkr.ecr.ap-northeast-2.amazonaws.com/java-sejin22:7727f99403cc78aade56becd2541629732eac337
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 4000m
              memory: 2Gi
